  a function so it is available in pygwy now.
- libgwymodule: New functions to obtain the name of the currently running
  file, proc, volume and graph module functions.
- libgwyprocess: New functions to count regional minima and maxima.
- libgwyapp: New simplified logging functions that do not require passing the
  function name.

Modules:
- OpenGPS (new): Imports OpenGPS surface data format (ISO 5436-2).
- Diffusion synthesis (new): Artificial surface generation by a diffussion
  limited aggregation simulation.
- Filters tool: Gaussian smoothing is no longer limited to integer FWHM.
- Columnar synthesis: Can plot the evolution of some statistics during the
  growth.
- APE DAX: Warning about invalid logging function name was fixed.


2.37 (2014-06-27)
Application:
- Translations updated: Czech, French, Italian, Russian.

Libraries:
- libgwyprocess: A function for filling grain voids was added.
- libgwyprocess: A simple x and y derivative filter function was added.
- libgwyprocess: A regional extrema marking function was added.
- libgwyprocess: A classic Vincent watershed algorithm function was added.
- libgwydgets: Several new stock icons were added.
- libgwyprocess: Pixel count was added as a new grain quantity.
- libgwyprocess: Crash in gwy_grain_values_calculate() when a quantity was
  requested multiple times was fixed.
- libgwyprocess: New function for performing one step of facet levelling.
- libgwyddion: New data type GwyRandGenSet providing a convenient set of random
  number generators and functions for sampling from different distributions.
- libgwyprocess: DataField z-value format is now based on autorange instead of
  the full data range.
- libgwyddion: Environment variables such as GWYDDION_LIBDIR override the
  system-default paths on all systems, including OS X now.
- libgwyddion: Module and data paths on OS X are taken from the bundle
  "net.gwyddion" instead of the main bundle, fixing broken paths in the
  standalone Python gwy module.

Modules: